# gh-sentinel

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: com.gh-sentinel.plist  config.example.yaml  gh-sentinel.service
src/gh_sentinel/: __init__.py  cli.py  dedup.py  formatter.py  monitor.py
src/gh_sentinel/alerts/: __init__.py  email.py  signal.py  slack.py
tests/: test_dedup.py  test_formatter.py  test_monitor.py
